Adicionando folha de estilo

--- a/index.html
+++ b/index.html
@@ -8,3 +8,14 @@ content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
+    <h1> Escolha o país para viajar:</h1>
+    <div class="button-container">
+        <img src="https://s2-valor.glbimg.com/I9IW7EGaVxNBnt3rjiur1HYbEM8=/0x0:1600x1068/600x0/smart/filters:gifv():strip_icc()/i.s3.glbimg.com/v1/AUTH_63b422c2caee4269b8b34177e8876b93/internal_photos/bs/2024/3/O/xMLl9LQ8yeAfZ6WbMelQ/china-mapa-6.jpg" alt="img pequeno" height="400" width="700">
+        <h2> Olá visitante,este site tem como objetivo te ajudar a escolher um país para viajar.Em cada um desses links tem uma breve apresentação do país</h2>
+        <a href="franca.html"class="button france">França</a>
+        <a href="italia.html" class="button italy">Itália</a>
+        <a href="japao.html" class="button japan">Japão</a>
+        <a href="brasil.html" class="button brazil">Brasil</a>
+    </div> 
+</body>
+</html>
